# pytorch-change-models

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/: release.yml
.github/workflows/: release.yml
examples/: changen2_pretrained_changestar1x256_inference_demo.ipynb  load_Changen2_synthetic_change_dataset.ipynb  segment_any_change_examples.ipynb  utils_output_masks.py
examples/example_project/: README.md
examples/example_project/configs/: comm.py  dinov3_cstar_vitl_1x256.py  dinov3_vitl_cstar_1x256.py  swint_cos.py  swint_cstar25_1x256.py  swint_cstar_1x256.py
examples/example_project/module/: mm_changeos.py  mm_changestar2_5.py  mm_changestar_1xd.py
src/: requirements.txt
src/models/: __init__.py
src/models/anychange/: README.md  __init__.py  configuration_anychange.py  modeling_anychange.py  modular_anychange.py
src/pipelines/: README_UNIFIED_PIPELINE.md  __init__.py  change_detection_pipeline.py  unified_change_detection_pipeline.py
src/test/: model_loader.py
torchange/: __init__.py
torchange/data/: __init__.py  bitemporal.py  bright.py  hf_builder.py  levircd.py  s2looking.py  second.py  xView2.py
torchange/metrics/: __init__.py  bcd.py  bright.py  scd.py  second.py  xview2.py
torchange/models/: __init__.py  changemask.py  changeos.py  changesparse.py  changestar2.py  changestar2_5.py  changestar_1xd.py  neds.py
torchange/module/: _sam_vit.py  farseg.py  lora.py  sam_vit.py  tv_swin.py  uper.py
torchange/training/: bisup_train_bright.py
torchange/utils/: mask_data.py  outputs.py  push_to_hub.py
(+50 files in other folders)
